[tool.poetry]
name = "stateful_pool"
version = "0.2.0"
description = "A process pool that allows workers to maintain state across tasks."
authors = ["Li, Meng-Xun <mengxunli@whu.edu.cn>"]
readme = "README.md"
repository = "https://github.com/menxli/stateful_pool"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"